tdf#92001 'Handles' contains array of PropertyValues

Change-Id: I17ea45f2b1dd46a7f1c0f3ce8c680bef9ec533fa
Reviewed-on: https://gerrit.libreoffice.org/16249
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 7dee641f675e7f472f5bec39cb92a1422fd1ffee)