oox/source/export/shapes.cxx
@@ -36,6 +36,7 @@
 #include <com/sun/star/awt/FontWeight.hpp>
 #include <com/sun/star/awt/FontUnderline.hpp>
 #include <com/sun/star/awt/Gradient.hpp>
+#include <com/sun/star/beans/PropertyValues.hpp>
 #include <com/sun/star/beans/XPropertySet.hpp>
 #include <com/sun/star/beans/XPropertySetInfo.hpp>
 #include <com/sun/star/beans/XPropertyState.hpp>
@@ -402,7 +403,7 @@ ShapeExport& ShapeExport::WriteCustomShape( Reference< XShape > xShape )
                     nAdjustmentValuesIndex = i;
                 else if ( rProp.Name == "Handles" )
                 {
-                    uno::Sequence<beans::PropertyValue> aHandles;
+                    uno::Sequence<beans::PropertyValues> aHandles;
                     rProp.Value >>= aHandles;
                     if ( aHandles.getLength() )
                         bHasHandles = true;
